<resources>
    <string name="app_name">Tuya SDK Demo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_no_account_signup">Don\'t have an account? <font color="#2196F3">Register Now</font></string>
    <string name="txt_register_header">Create New Account</string>
    <string name="txt_register_subheader">Please provide all the required information</string>
    <string name="txt_username">Username</string>
    <string name="txt_username_hint">cheezycode</string>
    <string name="txt_country">Country</string>
    <string name="txt_email">Email</string>
    <string name="txt_email_hint">user@gmail.com</string>
    <string name="txt_password">Password</string>
    <string name="txt_verification_code">Verification Code</string>
    <string name="txt_verification_hint">1234</string>
    <string name="txt_password_hint">........</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="user_send_code">Send Verification Code</string>
    <string name="txt_already_have_account">Already have an account? <font color="#2196F3">Login</font></string>
    <string name="txt_login_header">Welcome Back!</string>
    <string name="txt_login_subheader">Login to access your home</string>
    <string name="txt_login">Login</string>
    <string name="txt_error_message">%1$S*</string>
    <string name="note_title">Title</string>
    <string name="txt_title_hint">Write your title</string>
    <string name="txt_description">Description</string>
    <string name="txt_description_hint">Write your description</string>
    <string name="txt_submit">Submit</string>
    <string name="add_note">Add Note</string>
    <string name="india">India</string>
    <string name="logout">logout</string>
    <string name="scanner_descripation">scanner_descripation</string>
    <string name="added_homes">Added Homes</string>
    <string name="add_home_icon">add_home_icon</string>
    <string name="nexthomeicon">nextHomeIcon</string>
    <string name="home_name">Home Name*</string>
    <string name="no_home_found_icon">no_home_found_icon</string>
    <string name="not_found_any_home_added">Not found any home added</string>
    <string name="add_home">Add Home</string>
    <string name="no_devices">No devices</string>
    <string name="no_devices_icon">no_devices_icon</string>
    <string name="add_device">Add Device</string>
    <string name="add_device_icon">Add Device Icon</string>
    <string name="jack_home">jack\'s home</string>
    <string name="hint_wifi_name">Wifi SSID</string>
    <string name="hint_wifi_pwd">Wifi password</string>
    <string name="save">save</string>
    <string name="qr_code_image">qr_code_image</string>
    <string name="please_scan_the_qr_code">Please scan the QR code from 15 to 20 cm away</string>
    <string name="device_online">Online</string>
    <string name="device_offline">Offline</string>
    <string name="devices_list">Devices List</string>
    <string name="camera_desc">camera_desc</string>
    <string name="speak">Speak</string>
    <string name="snapshot">Snapshot</string>
    <string name="record">Record</string>
    <string name="replay">Replay</string>
    <string name="cloud_video">Cloud Video</string>
    <string name="message">Message</string>
    <string name="settings">Settings</string>
    <string name="device_info">Device Info</string>
    <string name="get_clarity">Get clarity</string>
    <string name="ipc_debug_tool">DEBUG TOOL</string>
    <string name="ipc_ptz">PTZ</string>
    <string name="not_support_device">The device is not supported</string>
    <string name="operation_failed">Operation failed</string>
    <string name="connect_failed">Connect failed</string>
    <string name="hd">HD</string>
    <string name="sd">SD</string>
    <string name="operation_suc">Operation success</string>
    <string name="ipc_stop_talk">Stop talk</string>
    <string name="ipc_start_talk">Start talk</string>
    <string name="other">Other</string>
    <string name="get_current_clarity">Current video clarity is: </string>
</resources>