<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_All"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context="com.demo.beavair.fragment.qrcode.QrCodeConfigFragment">

    <RelativeLayout
        android:id="@+id/relativeHeader"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="@dimen/_5sdp">

        <LinearLayout
            android:id="@+id/linearBack"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:contentDescription="@string/logout"
                android:src="@drawable/ic_back_arrow" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/linearBack"
            android:fontFamily="@font/sf_pro_display_bold"
            android:paddingHorizontal="@dimen/_14sdp"
            android:text="@string/add_device"
            android:textColor="@color/my_black"
            android:textSize="@dimen/_16ssp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:background="@color/my_white" />

    <LinearLayout
        android:id="@+id/linearWifeDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_14sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_wifi_name"
            android:textColor="@color/my_black"
            android:textSize="@dimen/_10ssp" />

        <EditText
            android:id="@+id/edtWifeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:autofillHints="name"
            android:background="@drawable/edt_bg"
            android:hint="@string/hint_wifi_name"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:padding="@dimen/_10sdp"
            android:textColorHint="@color/dark_gray"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:text="@string/hint_wifi_pwd"
            android:textColor="@color/my_black"
            android:textSize="@dimen/_10ssp" />

        <EditText
            android:id="@+id/edtWifiPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:autofillHints="name"
            android:background="@drawable/edt_bg"
            android:hint="@string/hint_wifi_pwd"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="@dimen/_10sdp"
            android:textColorHint="@color/dark_gray"
            android:textSize="@dimen/_12ssp" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_34sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/btn_bg"
            android:fontFamily="@font/sf_pro_display_bold"
            android:gravity="center"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textColor="@color/my_white"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardQrCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_25sdp"
        app:cardBackgroundColor="@color/my_white"
        app:cardCornerRadius="@dimen/_5sdp"
        android:visibility="gone"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_14sdp">

            <ImageView
                android:id="@+id/imgQrCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/qr_code_image" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="@string/please_scan_the_qr_code"
                android:textColor="@color/my_black"
                android:textSize="@dimen/_10ssp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>